--- a/index.html
+++ b/index.html
@@ -10,19 +10,81 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    body {
+      margin: 10;
+      display: fixed;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      background-color: lightblue;
+      font-size: 15px;
+      font-family: 'Outfit', sans-serif;
+    }
+
+    .rectangle-container {
+      max-width: 60%;
+      margin: 0 auto;
+      background-color: white;
+      border-radius: 15px;
+      overflow: hidden;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+
+    .rectangle-content {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+    }
+
+    .rectangle-image {
+      width: calc(100%-40%);
+      height: auto;
+      object-fit: cover;
+      /* align-items: center; */
+      border-radius: 15px 15px 15px 15px;
+      padding: 4%;
+      /* margin: 0 auto; */
+
+    }
+
+    .rectangle-text {
+      padding: 20px;
+      font-weight: bold;
+    }
+
+    .secondary-rectangle-text {
+      padding: 0px 20px 20px 20px ;
+      color: gray;
+    }
+
+    .attribution { 
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
+
   </style>
 </head>
 <body>
 
-  Improve your front-end skills by building projects
+  <div class="rectangle-container">
+    <div class="rectangle-content">
+      <img class="rectangle-image" src="images/image-qr-code.png" alt="QR Code">
+      <div class="rectangle-text">
+        Improve your front-end skills by building projects!
+      </div>
+      <div class="secondary-rectangle-text">
+        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+      </div>
+    </div>
+  </div>
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Joey S.</a>.
   </div>
 </body>
 </html>
