--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
       background-color: lightblue;
       font-size: 15px;
       font-family: 'Outfit', sans-serif;
+      max-width: 1440px;
     }
 
     .rectangle-container {
-      max-width: 60%;
+      width: 245px;
       margin: 0 auto;
       background-color: white;
       border-radius: 15px;
@@ -40,11 +41,9 @@
       width: calc(100%-40%);
       height: auto;
       object-fit: cover;
-      /* align-items: center; */
+      align-items: center;
       border-radius: 15px 15px 15px 15px;
       padding: 4%;
-      /* margin: 0 auto; */
-
     }
 
     .rectangle-text {
