--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
+      min-height: 100vh;
       background-color: lightblue;
       font-size: 15px;
       font-family: 'Outfit', sans-serif;
@@ -24,11 +25,16 @@
 
     .rectangle-container {
       width: 245px;
+      /* margin-top: 100px; */
       margin: 0 auto;
       background-color: white;
       border-radius: 15px;
       overflow: hidden;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      position: relative;
+      /* align-items: center;
+      justify-content: center; */
+      align-self: center;
     }
 
     .rectangle-content {
